back/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: back
  labels:
    name: back
