back/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend-service
  labels:
    app: backend
  namespace: back
spec:
  selector:
    app: backend
  ports:
    - name: http
      port: 5000
      targetPort: 5000
      protocol: TCP
  type: NodePort
